# Team-2_Mistral_AI_MCP_Hackathon

./: .gitignore  README.md  dev.py  example_env  facebook_callback_server.py  facebook_users.json  main.py  pyproject.toml
src/: __init__.py
src/ai/: __init__.py  mistral_client.py
src/api/: __init__.py  facebook_analytics.py  facebook_client.py  facebook_posts.py
src/config/: settings.py
src/tools/: __init__.py  ai_tools.py  analytics_tools.py  auth_tools.py  chart_tools.py  post_generation_tools.py  posting_tools.py
src/utils/: __init__.py  data_manager.py
